--- a/app/less/icons.less
+++ b/app/less/icons.less
@@ -1,10 +1,8 @@
 @font-face {
   font-family: 'icomoon';
-  src:    url('../fonts/icomoon.eot?485bue');
-  src:    url('../fonts/icomoon.eot?485bue#iefix') format('embedded-opentype'),
-  url('../fonts/icomoon.ttf?485bue') format('truetype'),
-  url('../fonts/icomoon.woff?485bue') format('woff'),
-  url('../fonts/icomoon.svg?485bue#icomoon') format('svg');
+  url('../fonts/icomoon.ttf') format('truetype'),
+  url('../fonts/icomoon.woff') format('woff'),
+  url('../fonts/icomoon.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -12,7 +10,6 @@
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
-
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
