--- a/app/less/icons.less
+++ b/app/less/icons.less
@@ -1,8 +1,9 @@
 @font-face {
   font-family: 'icomoon';
-  url('../fonts/icomoon.ttf') format('truetype'),
+  src : url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+          url('../fonts/icomoon.ttf') format('truetype'),
   url('../fonts/icomoon.woff') format('woff'),
-  url('../fonts/icomoon.svg') format('svg');
+  url('../fonts/icomoon.svg#svgFontName') format('svg');
   font-weight: normal;
   font-style: normal;
 }
