--- a/app/less/main.less
+++ b/app/less/main.less
@@ -45,7 +45,7 @@ body {
 
   .photo-widget_tools {
     order: 0;
-    flex: 0 0 16rem;
+    flex: 0 0 22rem;
     align-self: stretch;
     background-color: #EEE;
     height: 100vh;
@@ -56,7 +56,7 @@ body {
     align-self: stretch;
     overflow: hidden;
     height: 100vh;
-    background: purple;
+    background: white;
   }
 
   .photo-widget_upload-instructions {
@@ -132,14 +132,14 @@ body {
 
     vertical-align: middle;
     > label {
-      vertical-align: middle;
       font-size: 1rem;
-      display: inline-block;
-      margin-right: 2rem;
-      height: 2rem;
-      background-color: #EEE;
-      padding: .5rem;
       display: block;
+      margin: 0.1rem;
+      min-height: 2rem;
+      background-color: #EEE;
+      padding: 0.1rem;
+      display: block;
+      .photo-widget_blocky-label{display:block;}
     }
   }
 }
@@ -153,7 +153,7 @@ body {
     background: #DDD;
     padding: .25rem .5rem;
     border-radius: 4px;
-    display: inline-block;
+    display: block;
     text-align: center;
     transition: background-color 0.25s;
     cursor: pointer;
