--- a/app/less/main.less
+++ b/app/less/main.less
@@ -139,8 +139,9 @@ body {
       background-color: #EEE;
       padding: 0.1rem;
       display: block;
-      .photo-widget_blocky-label{display:block;}
     }
+    .photo-widget_blocky-label{display:block;}
+
   }
 }
 .photo-widget_boolean-button {
@@ -170,7 +171,12 @@ body {
     }
   }
 }
-
+.photo-widget_control-group{
+  border: solid 1px #888;
+  box-shadow: 1px 1px rgba(255,255,255, 1);
+  margin: .5rem 0;
+  padding: .5rem;
+}
 .is-clippped-circle {
   clip-path: circle(60px at center);
   /* OLD VALUE example: circle(245px, 140px, 50px); */
