--- a/app/less/main.less
+++ b/app/less/main.less
@@ -179,12 +179,15 @@ body {
 }
 
 .spinner{
+  position: fixed;
+  top:50%;
+  left:50%;
+  margin: -40px -40px 0 0;
   height: 100px;
   width: 100px;
   border-radius: 50%;
   background-color : rgba(255,255,100, 0.5);
-  margin: 5rem auto;
-  position: relative;
+
   span:first-child{
     display:block;
     //border-radius : 50% 0 0 50%;
