--- a/app/less/main.less
+++ b/app/less/main.less
@@ -110,6 +110,9 @@ body {
   }
   .photo-widget_editor {
     display: none;
+    height: 100%;
+    width: 100%;
+    overflow:auto;
   }
   .photo-widget_upload-instructions.is-hidden+.photo-widget_editor{display:block;}
   .photo-widget_editor canvas {
