--- a/app/less/main.less
+++ b/app/less/main.less
@@ -70,7 +70,7 @@ body {
 }
 
 .photo-widget_editor {
-
+   background: white;
   height: 100%;
   width: 100%;
   overflow: auto;
@@ -131,7 +131,8 @@ body {
 }
 
 .photo-widget_editor canvas {
-  display: block;
+  display: inline-block;
+
   border: solid 1px @border-color;
   margin: 0;
 
