fixed drag and drop bugs

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -66,6 +66,9 @@ body {
         z-index: 2;
       }
     }
+    &.is-dragover .photo-widget_upload-instructions {
+      background-color: grey;
+    }
   }
 }
 
@@ -128,9 +131,7 @@ body {
     }
   }
 
-  &.is-dragover {
-    background-color: grey;
-  }
+
 }
 
 .photo-widget_editor canvas {
