--- a/app/less/main.less
+++ b/app/less/main.less
@@ -6,6 +6,7 @@
 
 html, body {
   font-size: 67.2%;
+  cursor:  url(../assets/pencil.png), default;
 }
 
 body {
@@ -73,6 +74,7 @@ body {
 }
 
 .photo-widget_editor {
+
   background: white;
   height: 100%;
   width: 100%;
@@ -210,81 +212,69 @@ button {
   margin: 0 auto;
 }
 
-.spinner {
-  position: relative;
-  margin: 0 auto;
+.spinner{
   height: 100px;
   width: 100px;
   border-radius: 50%;
-  background-color: rgba(255, 255, 100, 0.5);
-
-  span:first-child {
-    display: block;
-    //border-radius : 50% 0 0 50%;
+  background-color : rgba(255,255,100, 0.5);
+  margin: 5rem auto;
+  position: relative;
+  span:first-child{
+    display:block;
     position: absolute;
-    top: -40px;
-    left: -40px;
+    top: -15px;
+    left: -15px;
     height: 0px;
-    width: 0px;
-    border-left: solid 90px transparent;
-    border-right: solid 90px transparent;
-    border-top: solid 90px rgba(255, 100, 100, 0.5);
-    border-bottom: solid 90px transparent;
-    border-radius: 50% 50% 0 0;
-    transform: translate(-50px, -50px);
-    animation: spin 3s linear infinite;
+    width:  0px;
+    border-left: solid 65px transparent;
+    border-right: solid 65px transparent;
+    border-top: solid 65px rgba(255, 100, 100, 0.5);
+    border-bottom: solid 65px transparent;
+    border-radius : 50% 50% 0 0 ;
+    animation : spin 9s linear infinite;
   }
-  span:nth-child(2) {
+  span:nth-child(2){
     position: absolute;
     top: 10px;
     left: 10px;
-    display: block;
-    //border-radius : 50% 0 0 50%;
+    display:block;
     height: 0px;
-    width: 0px;
+    width:  0px;
     border-left: solid 40px transparent;
     border-right: solid 40px transparent;
     border-top: solid 40px rgba(100, 100, 255, 0.5);
     border-bottom: solid 40px transparent;
-    border-radius: 50% 50% 0 0;
-    transform: translate(-50px, -50px);
-    animation: spinBackwards 2s linear infinite;
+    border-radius : 50% 50% 0 0 ;
+    animation : spinBackwards 2s linear infinite;
   }
-  span:last-child {
+  span:last-child{
     position: absolute;
     top: -10px;
     left: -10px;
-    display: block;
-    //border-radius : 50% 0 0 50%;
+    display:block;
     height: 0px;
-    width: 0px;
+    width:  0px;
     border-left: solid 60px transparent;
     border-right: solid 60px transparent;
     border-top: solid 60px rgba(100, 255, 100, 0.5);
     border-bottom: solid 60px transparent;
-    border-radius: 50% 50% 0 0;
-    transform: translate(-50px, -50px);
-    animation: spin 12s linear infinite;
+    border-radius : 50% 50% 0 0 ;
+    animation : spinBackwards 15s linear infinite;
   }
 }
 
 @keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+  0%  {transform : rotate(0deg)}
+
+  100% {transform : rotate(360deg)}
 }
 
+
 @keyframes spinBackwards {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(-360deg);
-  }
+  0%  {transform : rotate(0deg);}
+  100% {transform : rotate(-360deg);}
 }
+
 
 .is-clippped-circle {
   clip-path: circle(60px at center);
