change controls to tabs

--- a/app/less/modules/module_control_group.less
+++ b/app/less/modules/module_control_group.less
@@ -1,7 +1,7 @@
 .module_control_group {
   display:inline-block;
   height: 44px;
-  width: 400px;
+  width: 100%;
   border: solid 1px blue;
   transition: width 1s;
   overflow: hidden;
@@ -37,8 +37,7 @@
   }
 
   &.is-closed {
-
-    width: 44px;
+    width: 0px;
 
   }
 
