--- a/app/less/modules/module_control_group.less
+++ b/app/less/modules/module_control_group.less
@@ -1,5 +1,5 @@
 .module_control_group {
-  display:inline-block;
+  display: inline-block;
   height: 44px;
   width: 0px;
   border: none;
@@ -24,14 +24,6 @@
 
   }
 
-  .module_control_group-tool_switch {
-    display: inline-block;
-    height: 24px;
-    width: 24px;
-    vertical-align: middle;
-    margin: 10px;
-  }
-
   .module_control_group-tool_group_container {
     border: solid 1px red;
     display: inline-block;
@@ -43,7 +35,20 @@
   &.is-open {
     width: 100%;
     flex: 1 1 auto;
-
   }
+}
 
+.module_control_group-tool_switch {
+  display: inline-block;
+  vertical-align: middle;
+  border: solid 1px #AAA;
+  border-right: none;
+  background: #DDD;
+  border-radius:0px;
+  padding: .25rem .5rem;
+  text-align: center;
+  transition: background-color 0.25s;
+  cursor: pointer;
+  min-height: 43px;
+  width: 100%;
 }
