--- a/app/less/main.less
+++ b/app/less/main.less
@@ -63,6 +63,13 @@
     &.is-dragover .photo-widget_upload-instructions {
       background-color: grey;
     }
+    &.is-photo-big{
+      .photo-widget_editor{
+        canvas{
+          top: 0;
+          transform: none;}
+      }
+    }
   }
 }
 
