--- a/app/less/main.less
+++ b/app/less/main.less
@@ -196,8 +196,8 @@
 }
 
 .photo-widget_tab-panels{
+  border-top: solid 1px #999;
   width: 100%;
-
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -206,9 +206,9 @@
   justify-content: flex-start;
   align-content: stretch;
   align-items: flex-start;
-
+  height: 45px;
   .photo-widget_control-group{
-
+    height: 100%;
     overflow: hidden;
     text-align:left
   }
