--- a/app/less/modules/module_control_group.less
+++ b/app/less/modules/module_control_group.less
@@ -1,35 +1,32 @@
 .module_control_group {
   display: inline-block;
-  height: 44px;
+  height: 45px;
   width: 0px;
   border: none;
   transition: width 1s, flex 1s;
   overflow: hidden;
   flex: 0 1 0px;
   order: 0;
-
   align-self: stretch;
   .module_control_group-container {
-    height: 44px;
-    width: 400px;
-    //box-sizing: border-box;
-    //display: -ms-flexbox;
-    //display: -webkit-flex;
-    //display: flex;
-    //flex-direction: row;
-    //flex-wrap: nowrap;
-    //justify-content: flex-start;
-    //align-content: stretch;
-    //align-items: flex-start;
-
+    height: 45px;
+    width: 100%;
+    box-sizing: border-box;
+    text-align: center;
+    background-color: #DDD;
   }
 
   .module_control_group-tool_group_container {
-    border: solid 1px red;
     display: inline-block;
-    height: 24px;
+    height: 45px;
     vertical-align: middle;
-    margin: 10px;
+    margin: 3px 10px;
+    border-width: 0px 1px;
+    border-style: solid;
+    border-color: #AAA;
+    background-color: #EDEDED;
+    padding: 2px 1.5em;
+    box-shadow: 0 1px 1px #FFF, 0 -1px 1px #FFF;
   }
 
   &.is-open {
@@ -44,7 +41,7 @@
   border: solid 1px #AAA;
   border-right: none;
   background: #DDD;
-  border-radius:0px;
+  border-radius: 0px;
   padding: .25rem .5rem;
   text-align: center;
   transition: background-color 0.25s;
