--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,7 +1,7 @@
 @height: 70vh;
 @width: 70vw;
 @border-color: #AAA;
-
+@tab-panel-height: 60px;
 @import "icons";
 @import "./modules/module_control_group";
 
@@ -37,10 +37,9 @@
 
   .photo-widget_tools {
     order: 0;
-    flex: 0 0 22em;
+    flex: 1 1 auto;
     align-self: stretch;
     background-color: #EEE;
-    height: 100vh;
   }
 
   .photo-widget_workspace {
@@ -82,7 +81,6 @@
   z-index: 2;
   top: 0;
   left: 0;
-  background: white;
   text-align: center;
 
 }
@@ -164,7 +162,6 @@
     min-height: 2em;
     background-color: #EEE;
     padding: 0.1em;
-    display: block;
   }
   .photo-widget_blocky-label {
     display: block;
@@ -175,8 +172,6 @@
 .photo-widget_tabs{
   width: 100%;
   height : 45px;
-
-
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -185,6 +180,8 @@
   justify-content: flex-start;
   align-content: stretch;
   align-items: flex-start;
+  border-width: 0 0 1px 0;
+  border-style: solid;
 
   .photo-widget_tab{
     order: 0;
@@ -206,7 +203,7 @@
   justify-content: flex-start;
   align-content: stretch;
   align-items: flex-start;
-  height: 45px;
+  height: @tab-panel-height;
   .photo-widget_control-group{
     height: 100%;
     overflow: hidden;
@@ -224,7 +221,6 @@ button {
   transition: background-color 0.25s;
   cursor: pointer;
   outline: none;
-
   &.is-active {
     background-color: rgba(150,150,150, 1);
   }
@@ -260,8 +256,8 @@ button {
     position: absolute;
     top: -15px;
     left: -15px;
-    height: 0px;
-    width: 0px;
+    height:0;
+    width:0;
     border-left: solid 65px transparent;
     border-right: solid 65px transparent;
     border-top: solid 65px rgba(255, 100, 100, 0.5);
@@ -274,8 +270,8 @@ button {
     top: 10px;
     left: 10px;
     display: block;
-    height: 0px;
-    width: 0px;
+    height:0;
+    width:0;
     border-left: solid 40px transparent;
     border-right: solid 40px transparent;
     border-top: solid 40px rgba(100, 100, 255, 0.5);
@@ -288,8 +284,8 @@ button {
     top: -10px;
     left: -10px;
     display: block;
-    height: 0px;
-    width: 0px;
+    height:0;
+    width:0;
     border-left: solid 60px transparent;
     border-right: solid 60px transparent;
     border-top: solid 60px rgba(100, 255, 100, 0.5);
@@ -319,6 +315,14 @@ button {
 }
 
 //STATES
+
+.is-active{
+  &.module_control_group-tool_switch{
+    border-right-color: #777;
+    border-left-color: #666;
+  }
+
+}
 .is-hidden {
   display: none;
 }
@@ -331,7 +335,6 @@ button {
 
 .is-row-reverse-layout{}
 
-
 &.is-cropping {
   &.photo-widget_editor {
     cursor: url(../assets/crop.png), default;
@@ -340,22 +343,28 @@ button {
 
 &.is-rotating {
 }
+
 &.is-scaling {
 }
+
 &.is-zooming {
 }
+
 &.is-dragging {
 }
+
 &.is-loading {
   &.photo-widget_editor {
     cursor: url(../assets/spinner10.png), default;
   }
 }
+
 &.is-saving {
   &.photo-widget_editor {
     cursor: url(../assets/spinner10.png), default;
   }
 }
+
 &.is-busy {
   &.photo-widget_editor {
     cursor: url(../assets/spinner10.png), default;
