--- a/app/less/modules/module_control_group.less
+++ b/app/less/modules/module_control_group.less
@@ -1,4 +1,4 @@
-.module_control_group {
+.module-control-group {
   display: inline-block;
   height: 45px;
   width: 0px;
@@ -8,7 +8,7 @@
   flex: 0 1 0px;
   order: 0;
   align-self: stretch;
-  .module_control_group-container {
+  .module-control-group-container {
     height: @tab-panel-height;
     width: 100%;
     box-sizing: border-box;
@@ -16,7 +16,7 @@
     background-color: #EFEFEF;
   }
 
-  .module_control_group-tool_group_container {
+  .module-control-group_tool_group-container {
     border:none;
     display: inline-block;
     height: @tab-panel-height;
@@ -37,7 +37,7 @@
   }
 }
 
-.module_control_group-tool_switch {
+.module-control-group_tool-switch {
   display: inline-block;
   vertical-align: middle;
   border-width: 0 1px;
