--- a/app/less/main.less
+++ b/app/less/main.less
@@ -3,7 +3,7 @@
 @border-color: #AAA;
 @tab-panel-height: 60px;
 @import "icons";
-@import "./modules/module_control_group";
+@import "modules/module-control-group";
 
 
 
