--- a/app/less/modules/module-control-group.less
+++ b/app/less/modules/module-control-group.less
@@ -56,6 +56,12 @@
     }
 
   }
+  .module-control-group_group-name {
+    width: 100%;
+    text-align: center;
+    line-height: 24px;
+    font-size: 2.8em;
+  }
 }
 
 .module-slider-control {
@@ -157,12 +163,7 @@
       width: 61px;
       float: left;
     }
-    .module-control-group_group-name {
-      width: 100%;
-      text-align: center;
-      line-height: 24px;
-      font-size: 2.8em;
-    }
+
     .module-control-group_resets {
       display: block;
       text-align: right;
@@ -172,3 +173,7 @@
   }
 
 }
+.module-control-group_tool-group-scale {
+  .tool-group();
+}
+
