--- a/app/less/modules/module-control-group.less
+++ b/app/less/modules/module-control-group.less
@@ -2,7 +2,10 @@
 
 .tool-group() {
   position: relative;
-  height: 60px;
+  height: @tab-panel-height - 4px;
+  div:first-child{
+    height: 2.6em;
+  }
   > * {
     z-index: 2;
     position: relative;
@@ -103,7 +106,7 @@
   .module-control-group_tool-group-container {
 
     display: inline-block;
-    height: @tab-panel-height;
+    height: @tab-panel-height - 4px;
     vertical-align: middle;
     margin: 0 10px;
     border-width: 0px 1px;
@@ -154,9 +157,8 @@
     }
   }
   .module-control-group_lower-control-container {
-
     width: 100%;
-
+    height: 2.8em;
     .module-control-group_control-value {
       display: block;
       text-align: left;
@@ -173,7 +175,22 @@
   }
 
 }
-.module-control-group_tool-group-scale {
+.module-control-group_tool-group-crop {
+  .tool-group();
+
+}
+.module-control-group_tool-group-history {
   .tool-group();
 }
-
+.module-control-group_tool-group-undo-redo {
+  .tool-group();
+}
+.module-control-group_tool-group-rotate {
+  .tool-group();
+}
+.module-control-group_tool-group-save {
+  .tool-group();
+}
+.module-control-group_tool-group-zoom {
+  .tool-group();
+}
