--- a/app/less/modules/module-control-group.less
+++ b/app/less/modules/module-control-group.less
@@ -156,6 +156,7 @@
       outline: 0;
     }
   }
+
   .module-control-group_lower-control-container {
     width: 100%;
     height: 2.8em;
@@ -177,8 +178,8 @@
 }
 .module-control-group_tool-group-crop {
   .tool-group();
-
 }
+
 .module-control-group_tool-group-history {
   .tool-group();
 }
@@ -187,6 +188,15 @@
 }
 .module-control-group_tool-group-rotate {
   .tool-group();
+  .module-photo-widget_rotation-value{
+    font-weight: bolder;
+    font-size: 1.6em;
+    display: inline-block;
+    width: 3em;
+    vertical-align: top;
+
+.photo-widget_control-value{vertical-align: top;}
+  }
 }
 .module-control-group_tool-group-save {
   .tool-group();
