--- a/app/less/modules/module-control-group.less
+++ b/app/less/modules/module-control-group.less
@@ -200,7 +200,26 @@
 }
 .module-control-group_tool-group-save {
   .tool-group();
+  a.button{border: solid 1px #AAA;
+    display:inline-block;
+    background: #DDD;
+    padding: .25em .5em;
+    border-radius: 4px;
+    text-align: center;
+    transition: background-color 0.25s;
+    cursor: pointer;
+    outline: none;
+    color: black;
+    height: 13px;
+    min-width: 13px;
+  }
 }
+
+.module-control-group_tool-group-reset {
+  .tool-group();
+
+}
+
 .module-control-group_tool-group-zoom {
   .tool-group();
 }
