--- a/app/less/modules/module-control-group.less
+++ b/app/less/modules/module-control-group.less
@@ -24,6 +24,7 @@
     vertical-align: bottom;
     font-size: 2em;
     height: 32px;
+    min-width: 3em;
     line-height: 32px;
     span {
       color: #888;
